# thi_truc_tuyen

./: .gitignore  README.md  package.json
.cursor/rules/: agentic-coding.mdc  code-quality.mdc  core-behavior.mdc  output-format.mdc  react.mdc  set-language.mdc  thinking-reasoning.mdc  tool-usage.mdc
Code-spark/: .env.backup  .gitignore  README.md  course-service.postman_collection.json  docker-compose.jvm-tuning.yml  docker-compose.yml  package-lock.json  pom.xml  start-all-services.bat
Code-spark/.github/workflows/: ci.yml
Code-spark/infra/prometheus/: prometheus.yml
Code-spark/memory/: constitution.md
Code-spark/scripts/: git-automation.sh  maven-automation.sh
Code-spark/services/: database_erd_optimized.puml
Code-spark/services/rust_ws_gateway/: Cargo.toml
Code-spark/services/rust_ws_gateway/src/: main.rs
Code-spark/specs/: 001-core-infra.md  002-submission.md
mobile-app/: README.md  plan.md  pubspec.yaml
mobile-app/UI_app/: DESIGN.md  admin_dashboard.html  ch_nh_s_a_h_s_th_sinh.html  danh_s_ch_b_i_thi.html  gi_m_s_t_th_i_gian_th_c.html  h_s_c_nh_n_th_sinh.html  k_t_qu_ph_n_t_ch.html  m_n_h_nh_thi_tr_c_tuy_n.html  otp.html  qu_n_l_ph_n_th_ng_learntoken.html  trang_ch_th_sinh.html  x_c_th_c_otp_i_s_i_n_tho_i.html
mobile-app/lib/: main.dart
mobile-app/test/: widget_test.dart
mobile-app/web/: index.html  manifest.json
web-frontend/: .eslintrc.js  .gitignore  .vercelignore  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
web-frontend/public/: index.html
web-frontend/src/: App.tsx  index.tsx  vite-env.d.ts
(+1589 files in other folders)
