[package]
name = "rust_ws_gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.6", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
rdkafka = { version = "0.36", features = ["cmake-build"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.5"
tower-http = { version = "0.4", features = ["fs"] }
dotenvy = "0.15"